[tool.poetry]
name = "dreamworks"
version = "0.1.0"
description = "Collect documents programmatically and generate embeddings using different approaches"
authors = ["Lorraine Moyo <moyolorraine98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^5.1.2"
arxiv = "^2.3.1"
pandas = "^2.3.3"
dotenv = "^0.9.9"
cohere = "^5.20.0"
matplotlib = "^3.10.7"
wordcloud = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
